[package]
name = "pallet-gamecards"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nikania/GameCards"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.fixed-hash]
version = "0.7"
default-features = false 

[dependencies.serde]
optional = true
features = ['derive']
version = '1.0.124'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }

[dev-dependencies]
sp-core = {  version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
pallet-balances = { version = "3.0.0", default-features = false }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    "sp-std/std",
    'sp-api/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-timestamp/std',
]